--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ body {
 .section {
   position: relative;
   width: 100%;
-  height: 100vh;
+  min-height: calc(100vh - 8rem);
   overflow: hidden;
 }
 
@@ -102,22 +102,102 @@ body {
   filter: drop-shadow(0 0 6px rgba(55, 48, 163, 0.35));
 }
 
-.neon-button {
-  position: relative;
-  padding: 16px 32px;
-  color: white;
-  font-size: 1.25rem;
-  font-weight: bold;
-  border-radius: 8px;
-  border: 2px solid rgba(99, 102, 241, 0.7);
-  background-color: rgba(31, 41, 55, 0.5); /* Slightly dark background */
-  backdrop-filter: blur(10px);
+.neon-glow {
   box-shadow: 0 0 20px rgba(99, 102, 241, 0.5), 0 0 40px rgba(99, 102, 241, 0.5),
     0 0 60px rgba(99, 102, 241, 0.5);
   transition: all 0.3s ease;
 }
 
-.neon-button:hover {
+.neon-glow:hover {
   box-shadow: 0 0 30px rgba(99, 102, 241, 0.8), 0 0 60px rgba(99, 102, 241, 0.8),
     0 0 90px rgba(99, 102, 241, 0.8);
+}
+
+.github {
+  fill: #fff;
+}
+
+.bounce {
+  animation: bounce 4s infinite;
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(25px);
+  }
+  60% {
+    transform: translateY(0);
+  }
+  80% {
+    transform: translateY(15px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes glitch-animation {
+  0% {
+    clip: rect(44px, 9999px, 56px, 0);
+    transform: skew(0.4deg);
+  }
+  20% {
+    clip: rect(6px, 9999px, 44px, 0);
+    transform: skew(0.3deg);
+  }
+  40% {
+    clip: rect(19px, 9999px, 50px, 0);
+    transform: skew(0.1deg);
+  }
+  60% {
+    clip: rect(16px, 9999px, 71px, 0);
+    transform: skew(0.5deg);
+  }
+  80% {
+    clip: rect(56px, 9999px, 55px, 0);
+    transform: skew(0.2deg);
+  }
+  100% {
+    clip: rect(44px, 9999px, 56px, 0);
+    transform: skew(0.4deg);
+  }
+}
+
+.glitch-text {
+  position: relative;
+  color: inherit;
+  font-weight: 700;
+  text-transform: uppercase;
+  overflow: hidden;
+  text-shadow: 2px 2px rgb(14 165 233), -2px -2px rgb(139 92 246);
+  animation: glitch-animation 2s infinite;
+}
+
+.glitch-text::before,
+.glitch-text::after {
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background: transparent;
+  clip: rect(0, 900px, 0, 0);
+  background-blend-mode: blur(10px);
+}
+
+.glitch-text::before {
+  left: 2px;
+  text-shadow: -2px 0 rgb(139 92 246);
+  animation: glitch-animation 1s infinite;
+}
+
+.glitch-text::after {
+  left: -2px;
+  text-shadow: -2px 0 rgb(14 165 233);
+  animation: glitch-animation 1s infinite;
 }
